add clean task cronjob
init cronjob for sourcecode
https://loopback.io/doc/en/lb4/Running-cron-jobs.html#installation

--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
     "@loopback/authentication-jwt": "^0.10.0",
     "@loopback/boot": "^4.0.0",
     "@loopback/core": "^3.0.0",
+    "@loopback/cron": "^0.7.0",
     "@loopback/repository": "^4.0.0",
     "@loopback/rest": "^11.0.0",
     "@loopback/rest-explorer": "^4.0.0",
     "@loopback/security": "^0.6.0",
     "@loopback/service-proxy": "^4.0.0",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
